--- a/style.css
+++ b/style.css
@@ -125,10 +125,9 @@ body {
       margin-left: 10px;
       
    }
-   
+  
    .footer-logo{
-      padding-left: 15px;
-      
+      margin: 0 20px;
    }
 
    .footer-copyright{
